--- a/productos.html
+++ b/productos.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-    <script type="application/javascript" src="js/script2.js"></script>
-    <title>Agregar a lista</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+  <script type="application/javascript" src="js/script2.js"></script>
+  <title>Agregar a lista</title>
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 <body>
     <center>
-        <div>
+      <div class="container">
         <table id="tabla">
           <tbody>
-          <tr> 
-            <td>C&oacute;digo:</td>
+          <tr>
+            <td>Código:</td>
             <td>Nombre:</td>
             <td>Cantidad:</td>
             <td>Precio:</td>
@@ -23,10 +25,12 @@
             <td></td>
           </tr>
           </tbody>
-          </table>
-          </div>
-          <br>
-          <button type="button" id="btnCrear">Crear nota</button>
-        </center>
+        </table>
+      </div>
+      <br>
+      <button class="waves-effect waves-light btn-small" type="button" id="btnCrear">Crear nota</button>
+    </center>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
