--- a/productos.html
+++ b/productos.html
@@ -30,6 +30,9 @@
       <br>
       <button class="waves-effect waves-light btn-small" type="button" id="btnCrear">Crear nota</button>
     </center>
+    <div id="receiptContent">
+      
+    </div>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
