--- a/recibo.html
+++ b/recibo.html
@@ -39,7 +39,7 @@
                         <div class="col center">16%</div>
                     </div>
                     <div class="row">
-                        <div class="col s8"></div>
+                        <div class="col 8s"></div>
                         <div class="col m2">Total</div>
                     </div>
 
