--- a/productos.html
+++ b/productos.html
@@ -8,10 +8,13 @@
   <script type="application/javascript" src="js/script2.js"></script>
   <title>Agregar a lista</title>
   <!-- Compiled and minified CSS -->
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <center>
+      <h2> ** ¡Malon Mart! **</h2>
       <div class="container">
         <table id="tabla">
           <tbody>
